--- a/src/AdminWeb/src/app/views/points/users/users-filter/users-filter.component.html
+++ b/src/AdminWeb/src/app/views/points/users/users-filter/users-filter.component.html
@@ -1,21 +1,19 @@
 <c-card class="mb-3">
   <app-card-header #header icon="cilSearch" title="Vyhledávání" />
 
-  <c-card-body visibility [isVisible]="header.bodyVisible()" class="pt-2">
-    <form cForm [formGroup]="form">
-      <c-row class="mb-1">
-        <c-col>
-          <label cLabel for="guildId">Server</label>
-          <app-guild-lookup formControlName="guildId" />
-        </c-col>
+  <app-form-card-body [form]="form" [header]="header">
+    <c-row class="mb-1">
+      <c-col>
+        <label cLabel for="guildId">Server</label>
+        <app-guild-lookup formControlName="guildId" />
+      </c-col>
 
-        <c-col cCol="auto" class="d-flex justify-content-end align-items-end">
-          <app-filter-buttons
-            [disabled]="form.invalid"
-            [filterComponent]="this"
-          />
-        </c-col>
-      </c-row>
-    </form>
-  </c-card-body>
+      <c-col cCol="auto" class="d-flex justify-content-end align-items-end">
+        <app-filter-buttons
+          [disabled]="form.invalid"
+          [filterComponent]="this"
+        />
+      </c-col>
+    </c-row>
+  </app-form-card-body>
 </c-card>
