Finished searching section

--- a/src/AdminWeb/src/app/components/paginated-grid/paginated-grid.component.html
+++ b/src/AdminWeb/src/app/components/paginated-grid/paginated-grid.component.html
@@ -7,6 +7,7 @@
     [height]="height()"
     [dataSource]="source$"
     (rowsUpdated)="rowsUpdated.emit($event)"
+    (selectedRowsChanged)="selectedRowsChanged.emit($event)"
   ></app-ag-grid>
 
   <c-row class="mt-1">
