Dropped support for old searching

--- a/src/PrivateAdmin/src/app/administration/searching/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/searching/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <common-dashboard>
-    <app-filter (filterChanged)="list.filterChanged($event)" filter></app-filter>
-    <app-list list #list></app-list>
+    <app-new-web-info
+        [text]="'Seznam hledání bylo převedeno do nové administrace.'"
+    />
 </common-dashboard>
