--- a/src/AdminWeb/src/app/views/emote/emote-detail/emote-detail.component.html
+++ b/src/AdminWeb/src/app/views/emote/emote-detail/emote-detail.component.html
@@ -134,6 +134,13 @@
               (statisticsReloaded)="reload()"
             />
           </c-col>
+
+          <c-col md="4">
+            <app-emote-merge
+              [guildId]="guildId()"
+              [sourceEmoteId]="emoteFullId()"
+            />
+          </c-col>
         </c-row>
       }
     }
