--- a/src/AdminWeb/src/app/views/emote/emote-detail/emote-usage-list/emote-usage-list.component.html
+++ b/src/AdminWeb/src/app/views/emote/emote-detail/emote-usage-list/emote-usage-list.component.html
@@ -1,5 +1,9 @@
 <div class="mt-3">
-  <app-paginated-grid #grid [gridOptions]="gridOptions" />
+  <app-paginated-grid
+    #grid
+    [gridOptions]="gridOptions"
+    (reloadRequested)="reload()"
+  />
 </div>
 
 <c-modal #deleteUserStatisticsModal alignment="center" size="lg">
