Implemented common component for creating shared filters

--- a/src/AdminWeb/src/app/views/points/leaderboard/points-leaderboard.component.html
+++ b/src/AdminWeb/src/app/views/points/leaderboard/points-leaderboard.component.html
@@ -5,8 +5,13 @@
     <div>
       <label cLabel for="guildId">Server</label>
       <app-guild-lookup formControlName="guildId" />
+      <app-validation-errors [form]="form" controlName="guildId" />
     </div>
   </app-form-card-body>
+
+  <c-card-footer>
+    <app-filter-store [form]="form" />
+  </c-card-footer>
 </c-card>
 
 <div class="mb-3">
