--- a/src/AdminWeb/src/app/views/points/transactions/transactions-filter/transactions-filter.component.html
+++ b/src/AdminWeb/src/app/views/points/transactions/transactions-filter/transactions-filter.component.html
@@ -81,14 +81,19 @@
         <div></div>
       </c-col>
     </c-row>
+  </app-form-card-body>
 
-    <c-row class="mt-1">
-      <c-col class="d-flex justify-content-end">
+  <c-card-footer>
+    <c-row>
+      <c-col md="9">
+        <app-filter-store [form]="form" />
+      </c-col>
+      <c-col cCol="auto" class="d-flex justify-content-end align-items-end">
         <app-filter-buttons
           [disabled]="form.invalid"
           [filterComponent]="this"
         />
       </c-col>
     </c-row>
-  </app-form-card-body>
+  </c-card-footer>
 </c-card>
