--- a/src/AdminWeb/src/app/views/reminder/reminder-list/reminder-list-filter/reminder-list-filter.component.html
+++ b/src/AdminWeb/src/app/views/reminder/reminder-list/reminder-list-filter/reminder-list-filter.component.html
@@ -65,13 +65,20 @@
           </c-col>
         </c-row>
       </c-col>
+    </c-row>
+  </app-form-card-body>
 
-      <c-col class="d-flex justify-content-end">
+  <c-card-footer>
+    <c-row>
+      <c-col>
+        <app-filter-store [form]="form" />
+      </c-col>
+      <c-col cCol="auto" class="d-flex justify-content-end">
         <app-filter-buttons
           [filterComponent]="this"
           [disabled]="form.invalid"
         />
       </c-col>
     </c-row>
-  </app-form-card-body>
+  </c-card-footer>
 </c-card>
