--- a/src/AdminWeb/src/app/views/searching/searching-list/searching-list-filter/searching-list-filter.component.html
+++ b/src/AdminWeb/src/app/views/searching/searching-list/searching-list-filter/searching-list-filter.component.html
@@ -51,7 +51,7 @@
       </c-col>
     </c-row>
 
-    <c-row class="mb-2">
+    <c-row>
       <c-col>
         <label cLabel for="messageQuery">Obsah hledání</label>
         <input cFormControl type="text" formControlName="messageQuery" />
@@ -76,13 +76,20 @@
           </c-col>
         </c-row>
       </c-col>
+    </c-row>
+  </app-form-card-body>
 
-      <c-col class="d-flex justify-content-end align-items-end">
+  <c-card-footer>
+    <c-row>
+      <c-col>
+        <app-filter-store [form]="form" />
+      </c-col>
+      <c-col cCol="auto" class="d-flex justify-content-end align-items-end">
         <app-filter-buttons
           [disabled]="form.invalid"
           [filterComponent]="this"
         />
       </c-col>
     </c-row>
-  </app-form-card-body>
+  </c-card-footer>
 </c-card>
