--- a/src/AdminWeb/src/app/views/points/users/users-filter/users-filter.component.html
+++ b/src/AdminWeb/src/app/views/points/users/users-filter/users-filter.component.html
@@ -7,7 +7,14 @@
         <label cLabel for="guildId">Server</label>
         <app-guild-lookup formControlName="guildId" />
       </c-col>
+    </c-row>
+  </app-form-card-body>
 
+  <c-card-footer>
+    <c-row>
+      <c-col>
+        <app-filter-store [form]="form" />
+      </c-col>
       <c-col cCol="auto" class="d-flex justify-content-end align-items-end">
         <app-filter-buttons
           [disabled]="form.invalid"
@@ -15,5 +22,5 @@
         />
       </c-col>
     </c-row>
-  </app-form-card-body>
+  </c-card-footer>
 </c-card>
