Common implementation for loading shared filters and filters in the query string

--- a/src/AdminWeb/src/app/views/points/transactions/transactions-filter/transactions-filter.component.html
+++ b/src/AdminWeb/src/app/views/points/transactions/transactions-filter/transactions-filter.component.html
@@ -85,7 +85,7 @@
 
   <c-card-footer>
     <c-row>
-      <c-col md="9">
+      <c-col>
         <app-filter-store [form]="form" />
       </c-col>
       <c-col cCol="auto" class="d-flex justify-content-end align-items-end">
