Fixed dark theme

--- a/src/AdminWeb/src/scss/_ag-grid.scss
+++ b/src/AdminWeb/src/scss/_ag-grid.scss
@@ -30,8 +30,18 @@
   }
 
   & .ag-row {
-    &.bg-danger-subtle {
+    &.bg-danger-subtle,
+    &.bg-warning-subtle,
+    &.bg-success-subtle {
       & .ag-cell {
+        color: $dark;
+      }
+    }
+
+    & .bg-danger-subtle,
+    & .bg-warning-subtle,
+    & .bg-success-subtle {
+      &.ag-cell {
         color: $dark;
       }
     }
