--- a/src/AdminWeb/src/scss/_ng-select.scss
+++ b/src/AdminWeb/src/scss/_ng-select.scss
@@ -8,7 +8,8 @@
       border-color: var(--cui-border-color) !important;
 
       & input,
-      & .ng-value .ng-value-label {
+      & .ng-value .ng-value-label,
+      & .ng-value {
         color: #fff;
       }
     }
