--- a/src/AdminWeb/src/app/views/auditlog/auditlog-list/auditlog-list-filter/auditlog-list-filter.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-list/auditlog-list-filter/auditlog-list-filter.component.html
@@ -17,6 +17,7 @@
 
       <c-col>
         <label cLabel for="userIds">Uživatel</label>
+        <app-user-lookup formControlName="userId" />
       </c-col>
 
       <c-col>
